hero section done

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
       </div>
     </nav>
   </header>
+  <!-- ----hero section------- -->
+  <section class="hero-section">
+    <!-- -----left side contend -->
+    <div class="hero-contend">
+      <h1>Best products Within Budget</h1>
+      <p>A Quick brown fox jumps over the lazy dog Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni,
+        impedit.</p>
+      <button>Shop Now</button>
+    </div>
+    <!-- ------right side contend------ -->
+    <div class="hero-img">
+      <img src="./img/healthy-food.jpg" alt="hero img">
+    </div>
+  </section>
 </body>
 
 </html>
