vegetable images done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h1>Mohammad</h1>
+        <h1>VEGETABLE</h1>
       </div>
       <div class="menu">
         <a href="#products">
@@ -37,6 +37,43 @@
     <!-- ------right side contend------ -->
     <div class="hero-img">
       <img src="./img/healthy-food.jpg" alt="hero img">
+    </div>
+  </section>
+
+  <!------ products section ----- -->
+  <section id="products" class="products-section">
+    <h1>VEGETABLE FOOD</h1>
+    <div class="products">
+      <div class="products-card">
+        <img src="./img/1-tomato-png-image.png" alt="">
+        <h3>price: 60tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+      <div class="products-card">
+        <img src="./img/2-carrot-png-image.png" alt="">
+        <h3>price: 55tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+      <div class="products-card">
+        <img src="./img/3-cabbage-png-image.png" alt="">
+        <h3>price: 70tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+      <div class="products-card">
+        <img src="./img/4-broccoli-png-image-with-transparent-background.png" alt="">
+        <h3>price: 80tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+      <div class="products-card">
+        <img src="./img/5-potato-png-images-pictures-download.png" alt="">
+        <h3>price: 82tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
+      <div class="products-card">
+        <img src="./img/6-eggplant-png-images-download.png" alt="">
+        <h3>price: 35tk</h3>
+        <button class="buy-btn">Buy Now</button>
+      </div>
     </div>
   </section>
 </body>
