--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
       </div>
     </div>
   </section>
+
+  <!-- ---footer section -->
+  <footer>
+    <p>copyright &copy; 2024 all right reserved by <samp>Vegetable Food...</samp></p>
+  </footer>
 </body>
 
 </html>
